pod.yaml
apiVersion: v1
  kind: Pod
  metadata:
    name: ${1:myapp}
    labels:
      name: ${1:myapp}
  spec:
    containers:
    - name: ${1:myapp}
      image: ${2:<Image>}
      ports:
        - containerPort: ${3:<Port>}
