service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: ${1:myapp}
  spec:
    selector:
      app: ${2:myapp}
    ports:
    - port: ${3:<Port>}
      targetPort: ${4:<Target Port>}
